--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "latest",
-    "@supabase/auth-helpers-nextjs": "latest",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -38,7 +37,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "autoprefixer": "latest",
+    "@supabase/auth-helpers-nextjs": "latest",
     "class-variance-authority": "latest",
     "clsx": "latest",
     "cmdk": "latest",
@@ -66,8 +65,9 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "autoprefixer": "^10.4.21",
     "postcss": "latest",
-    "tailwindcss": "latest",
+    "tailwindcss": "^4.1.13",
     "typescript": "latest"
   }
 }
